; ModuleID = '/home/carl/AnghaBench/tmux/extr_status.c_status_pop_screen.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_status.c_status_pop_screen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client = type { %struct.status_line }
%struct.status_line = type { i64, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.client*)* @status_pop_screen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @status_pop_screen(%struct.client* %0) #0 {
  %2 = alloca %struct.client*, align 8
  %3 = alloca %struct.status_line*, align 8
  store %struct.client* %0, %struct.client** %2, align 8
  %4 = load %struct.client*, %struct.client** %2, align 8
  %5 = getelementptr inbounds %struct.client, %struct.client* %4, i32 0, i32 0
  store %struct.status_line* %5, %struct.status_line** %3, align 8
  %6 = load %struct.status_line*, %struct.status_line** %3, align 8
  %7 = getelementptr inbounds %struct.status_line, %struct.status_line* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = add nsw i64 %8, -1
  store i64 %9, i64* %7, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %1
  %12 = load %struct.status_line*, %struct.status_line** %3, align 8
  %13 = getelementptr inbounds %struct.status_line, %struct.status_line* %12, i32 0, i32 2
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @screen_free(i32* %14)
  %16 = load %struct.status_line*, %struct.status_line** %3, align 8
  %17 = getelementptr inbounds %struct.status_line, %struct.status_line* %16, i32 0, i32 2
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @free(i32* %18)
  %20 = load %struct.status_line*, %struct.status_line** %3, align 8
  %21 = getelementptr inbounds %struct.status_line, %struct.status_line* %20, i32 0, i32 1
  %22 = load %struct.status_line*, %struct.status_line** %3, align 8
  %23 = getelementptr inbounds %struct.status_line, %struct.status_line* %22, i32 0, i32 2
  store i32* %21, i32** %23, align 8
  br label %24

24:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @screen_free(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
